// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders bonusBar 1`] = `
<div
  className="css-19wk7ys"
>
  <div
    className="css-iwdsn5"
  >
    <div
      className="css-1r7bzjg"
    >
      <div
        className={undefined}
        data-css-jpg3o=""
      />
    </div>
    <div
      className="css-1nqeg2a"
    >
      <div>
        Anything
      </div>
    </div>
  </div>
  <div
    className="css-8n0rg6"
  >
    <span
      style={
        Object {
          "display": "block",
          "maxHeight": "0px",
          "overflow": "hidden",
          "position": "relative",
        }
      }
    >
      <span
        style={
          Object {
            "display": "block",
            "width": "100%",
          }
        }
      >
        
        …
      </span>
      <span
        style={
          Object {
            "display": "block",
            "height": "0px",
            "overflow": "hidden",
            "width": "100%",
          }
        }
      >
        The card title
      </span>
      <span
        style={
          Object {
            "display": "block",
            "left": "-20000px",
            "position": "absolute",
            "width": "100%",
          }
        }
      >
        <span
          style={
            Object {
              "display": "block",
            }
          }
        >
          <span
            style={
              Object {
                "display": "block",
              }
            }
          >
            W
          </span>
          <span
            style={
              Object {
                "display": "block",
              }
            }
          >
            W
          </span>
        </span>
        <span
          style={
            Object {
              "display": "block",
            }
          }
        >
          
          …
        </span>
      </span>
    </span>
  </div>
</div>
`;

exports[`renders custom metadata classes 1`] = `
<div
  className="css-19wk7ys"
>
  <div
    className="css-iwdsn5"
  >
    <div
      className="css-1r7bzjg"
    >
      <div
        className={undefined}
        data-css-jpg3o=""
      />
    </div>
  </div>
  <div
    className="css-8n0rg6"
  >
    <span
      style={
        Object {
          "display": "block",
          "maxHeight": "0px",
          "overflow": "hidden",
          "position": "relative",
        }
      }
    >
      <span
        style={
          Object {
            "display": "block",
            "width": "100%",
          }
        }
      >
        
        …
      </span>
      <span
        style={
          Object {
            "display": "block",
            "height": "0px",
            "overflow": "hidden",
            "width": "100%",
          }
        }
      >
        The card title
      </span>
      <span
        style={
          Object {
            "display": "block",
            "left": "-20000px",
            "position": "absolute",
            "width": "100%",
          }
        }
      >
        <span
          style={
            Object {
              "display": "block",
            }
          }
        >
          <span
            style={
              Object {
                "display": "block",
              }
            }
          >
            W
          </span>
          <span
            style={
              Object {
                "display": "block",
              }
            }
          >
            W
          </span>
        </span>
        <span
          style={
            Object {
              "display": "block",
            }
          }
        >
          
          …
        </span>
      </span>
    </span>
  </div>
  <div
    className="css-bcrrqv"
  >
    <span
      className="keepme"
    >
      Custom
    </span>
  </div>
</div>
`;

exports[`renders fullOverlay 1`] = `
<div
  className="css-19wk7ys"
>
  <div
    className="css-iwdsn5"
  >
    <div
      className="css-1r7bzjg"
    >
      <div
        className={undefined}
        data-css-jpg3o=""
      />
    </div>
    <div
      className="css-1opv87a"
    >
      <div
        className={undefined}
        data-css-1fxa3fl=""
      >
        FakePlayBtn
      </div>
    </div>
  </div>
  <div
    className="css-8n0rg6"
  >
    <span
      style={
        Object {
          "display": "block",
          "maxHeight": "0px",
          "overflow": "hidden",
          "position": "relative",
        }
      }
    >
      <span
        style={
          Object {
            "display": "block",
            "width": "100%",
          }
        }
      >
        
        …
      </span>
      <span
        style={
          Object {
            "display": "block",
            "height": "0px",
            "overflow": "hidden",
            "width": "100%",
          }
        }
      >
        The card title
      </span>
      <span
        style={
          Object {
            "display": "block",
            "left": "-20000px",
            "position": "absolute",
            "width": "100%",
          }
        }
      >
        <span
          style={
            Object {
              "display": "block",
            }
          }
        >
          <span
            style={
              Object {
                "display": "block",
              }
            }
          >
            W
          </span>
          <span
            style={
              Object {
                "display": "block",
              }
            }
          >
            W
          </span>
        </span>
        <span
          style={
            Object {
              "display": "block",
            }
          }
        >
          
          …
        </span>
      </span>
    </span>
  </div>
</div>
`;

exports[`renders link class on meta only if anchor tag 1`] = `
<div
  className="css-19wk7ys"
>
  <div
    className="css-iwdsn5"
  >
    <div
      className="css-1r7bzjg"
    >
      <div
        className={undefined}
        data-css-jpg3o=""
      />
    </div>
  </div>
  <div
    className="css-8n0rg6"
  >
    <span
      style={
        Object {
          "display": "block",
          "maxHeight": "0px",
          "overflow": "hidden",
          "position": "relative",
        }
      }
    >
      <span
        style={
          Object {
            "display": "block",
            "width": "100%",
          }
        }
      >
        
        …
      </span>
      <span
        style={
          Object {
            "display": "block",
            "height": "0px",
            "overflow": "hidden",
            "width": "100%",
          }
        }
      >
        The card title
      </span>
      <span
        style={
          Object {
            "display": "block",
            "left": "-20000px",
            "position": "absolute",
            "width": "100%",
          }
        }
      >
        <span
          style={
            Object {
              "display": "block",
            }
          }
        >
          <span
            style={
              Object {
                "display": "block",
              }
            }
          >
            W
          </span>
          <span
            style={
              Object {
                "display": "block",
              }
            }
          >
            W
          </span>
        </span>
        <span
          style={
            Object {
              "display": "block",
            }
          }
        >
          
          …
        </span>
      </span>
    </span>
  </div>
  <div
    className="css-bcrrqv"
  >
    <span
      className={undefined}
    >
      No link class
    </span>
    <span
      aria-hidden={true}
      className="css-kykfz1"
    >
      ·
    </span>
    <a
      className={undefined}
      data-css-ohpd3v=""
    >
      yes link class
    </a>
  </div>
</div>
`;

exports[`renders no tag if size is small 1`] = `
<div
  className="css-1hal8pq"
>
  <div
    className="css-b22ep1"
  >
    <div
      className="css-1r7bzjg"
    >
      <div
        className={undefined}
        data-css-jpg3o=""
      />
    </div>
  </div>
  <div
    className="css-aoggyi"
  >
    <span
      style={
        Object {
          "display": "block",
          "maxHeight": "0px",
          "overflow": "hidden",
          "position": "relative",
        }
      }
    >
      <span
        style={
          Object {
            "display": "block",
            "width": "100%",
          }
        }
      >
        
        …
      </span>
      <span
        style={
          Object {
            "display": "block",
            "height": "0px",
            "overflow": "hidden",
            "width": "100%",
          }
        }
      >
        The card title
      </span>
      <span
        style={
          Object {
            "display": "block",
            "left": "-20000px",
            "position": "absolute",
            "width": "100%",
          }
        }
      >
        <span
          style={
            Object {
              "display": "block",
            }
          }
        >
          <span
            style={
              Object {
                "display": "block",
              }
            }
          >
            W
          </span>
          <span
            style={
              Object {
                "display": "block",
              }
            }
          >
            W
          </span>
        </span>
        <span
          style={
            Object {
              "display": "block",
            }
          }
        >
          
          …
        </span>
      </span>
    </span>
  </div>
</div>
`;

exports[`renders required props 1`] = `
<div
  className="css-19wk7ys"
>
  <div
    className="css-iwdsn5"
  >
    <div
      className="css-1r7bzjg"
    >
      <div
        className={undefined}
        data-css-jpg3o=""
      />
    </div>
  </div>
  <div
    className="css-8n0rg6"
  >
    <span
      style={
        Object {
          "display": "block",
          "maxHeight": "0px",
          "overflow": "hidden",
          "position": "relative",
        }
      }
    >
      <span
        style={
          Object {
            "display": "block",
            "width": "100%",
          }
        }
      >
        
        …
      </span>
      <span
        style={
          Object {
            "display": "block",
            "height": "0px",
            "overflow": "hidden",
            "width": "100%",
          }
        }
      >
        The card title
      </span>
      <span
        style={
          Object {
            "display": "block",
            "left": "-20000px",
            "position": "absolute",
            "width": "100%",
          }
        }
      >
        <span
          style={
            Object {
              "display": "block",
            }
          }
        >
          <span
            style={
              Object {
                "display": "block",
              }
            }
          >
            W
          </span>
          <span
            style={
              Object {
                "display": "block",
              }
            }
          >
            W
          </span>
        </span>
        <span
          style={
            Object {
              "display": "block",
            }
          }
        >
          
          …
        </span>
      </span>
    </span>
  </div>
</div>
`;

exports[`renders tag 1`] = `
<div
  className="css-19wk7ys"
>
  <div
    className="css-iwdsn5"
  >
    <div
      className="css-1r7bzjg"
    >
      <div
        className={undefined}
        data-css-jpg3o=""
      />
    </div>
    <div
      className="css-1gmxx97"
    >
      <div
        className={undefined}
        data-css-1c199zc=""
        size="xSmall"
      >
        FakeSVG
      </div>
      <span
        className={undefined}
        data-css-1c199zc=""
        size="xSmall"
      >
        Course
      </span>
    </div>
  </div>
  <div
    className="css-8n0rg6"
  >
    <span
      style={
        Object {
          "display": "block",
          "maxHeight": "0px",
          "overflow": "hidden",
          "position": "relative",
        }
      }
    >
      <span
        style={
          Object {
            "display": "block",
            "width": "100%",
          }
        }
      >
        
        …
      </span>
      <span
        style={
          Object {
            "display": "block",
            "height": "0px",
            "overflow": "hidden",
            "width": "100%",
          }
        }
      >
        The card title
      </span>
      <span
        style={
          Object {
            "display": "block",
            "left": "-20000px",
            "position": "absolute",
            "width": "100%",
          }
        }
      >
        <span
          style={
            Object {
              "display": "block",
            }
          }
        >
          <span
            style={
              Object {
                "display": "block",
              }
            }
          >
            W
          </span>
          <span
            style={
              Object {
                "display": "block",
              }
            }
          >
            W
          </span>
        </span>
        <span
          style={
            Object {
              "display": "block",
            }
          }
        >
          
          …
        </span>
      </span>
    </span>
  </div>
</div>
`;
